--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL="http://localhost:3000/api/v1"
+VITE_API_BASE_URL="https://my-json-server.typicode.com/0renzo0loli0/learning-center-db"
